src/objects/c2g__InquiryTemplateSortItem__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__GroupBy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InquiryTemplateColumn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inquiry Template Column</label>
        <referenceTo>c2g__InquiryTemplateColumn__c</referenceTo>
        <relationshipLabel>Inquiry Template Sort Items</relationshipLabel>
        <relationshipName>InquiryTemplateSortItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InquiryTemplate__c</fullName>
        <label>Inquiry Template</label>
        <referenceTo>c2g__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Inquiry Template Sort Items</relationshipLabel>
        <relationshipName>InquiryTemplateSortItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Order__c</fullName>
        <label>Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <default>true</default>
                    <label>ASC</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>zDeprecated:Inquiry Template Sort Item</label>
    <nameField>
        <displayFormat>ITSI-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Template Sort Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>